--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -169,9 +169,6 @@
   .relative {
     position: relative;
   }
-  .top-\[30\%\] {
-    top: 30%;
-  }
   .right-0 {
     right: calc(var(--spacing) * 0);
   }
@@ -192,9 +189,6 @@
   }
   .left-\[14px\] {
     left: 14px;
-  }
-  .z-20 {
-    z-index: 20;
   }
   .z-50 {
     z-index: 50;
@@ -219,9 +213,6 @@
   }
   .mx-auto {
     margin-inline: auto;
-  }
-  .-mt-32 {
-    margin-top: calc(var(--spacing) * -32);
   }
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
@@ -253,12 +244,6 @@
   .mt-24 {
     margin-top: calc(var(--spacing) * 24);
   }
-  .-mb-6 {
-    margin-bottom: calc(var(--spacing) * -6);
-  }
-  .mb-2 {
-    margin-bottom: calc(var(--spacing) * 2);
-  }
   .mb-3 {
     margin-bottom: calc(var(--spacing) * 3);
   }
@@ -270,6 +255,9 @@
   }
   .block {
     display: block;
+  }
+  .contents {
+    display: contents;
   }
   .flex {
     display: flex;
@@ -314,29 +302,14 @@
   .h-\[34px\] {
     height: 34px;
   }
-  .h-\[40px\] {
-    height: 40px;
-  }
   .h-\[44px\] {
     height: 44px;
-  }
-  .h-\[216px\] {
-    height: 216px;
-  }
-  .h-\[714px\] {
-    height: 714px;
   }
   .w-12 {
     width: calc(var(--spacing) * 12);
   }
   .w-\[22px\] {
     width: 22px;
-  }
-  .w-\[40px\] {
-    width: 40px;
-  }
-  .w-\[78\%\] {
-    width: 78%;
   }
   .w-\[82px\] {
     width: 82px;
@@ -350,29 +323,14 @@
   .w-\[88\%\] {
     width: 88%;
   }
-  .w-\[100\%\] {
-    width: 100%;
-  }
-  .w-\[110px\] {
-    width: 110px;
-  }
-  .w-\[152px\] {
-    width: 152px;
-  }
   .w-\[720px\] {
     width: 720px;
-  }
-  .w-\[872px\] {
-    width: 872px;
   }
   .w-auto {
     width: auto;
   }
   .w-full {
     width: 100%;
-  }
-  .max-w-5xl {
-    max-width: var(--container-5xl);
   }
   .max-w-6xl {
     max-width: var(--container-6xl);
@@ -448,21 +406,11 @@
   .gap-32 {
     gap: calc(var(--spacing) * 32);
   }
-  .gap-\[33px\] {
-    gap: 33px;
-  }
   .space-y-4 {
     :where(& > :not(:last-child)) {
       --tw-space-y-reverse: 0;
       margin-block-start: calc(calc(var(--spacing) * 4) * var(--tw-space-y-reverse));
       margin-block-end: calc(calc(var(--spacing) * 4) * calc(1 - var(--tw-space-y-reverse)));
-    }
-  }
-  .space-y-6 {
-    :where(& > :not(:last-child)) {
-      --tw-space-y-reverse: 0;
-      margin-block-start: calc(calc(var(--spacing) * 6) * var(--tw-space-y-reverse));
-      margin-block-end: calc(calc(var(--spacing) * 6) * calc(1 - var(--tw-space-y-reverse)));
     }
   }
   .rounded-\[8px\] {
@@ -487,10 +435,6 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
-  .border-1 {
-    border-style: var(--tw-border-style);
-    border-width: 1px;
-  }
   .border-2 {
     border-style: var(--tw-border-style);
     border-width: 2px;
@@ -502,10 +446,6 @@
   .border-\[3px\] {
     border-style: var(--tw-border-style);
     border-width: 3px;
-  }
-  .border-y {
-    border-block-style: var(--tw-border-style);
-    border-block-width: 1px;
   }
   .border-t {
     border-top-style: var(--tw-border-style);
@@ -570,9 +510,6 @@
   .bg-white {
     background-color: var(--color-white);
   }
-  .bg-\[linear-gradient\(151deg\,rgba\(255\,255\,255\,0\.40\)_-0\.97\%\,rgba\(255\,255\,255\,0\.80\)_95\.5\%\)\] {
-    background-image: linear-gradient(151deg,rgba(255,255,255,0.40) -0.97%,rgba(255,255,255,0.80) 95.5%);
-  }
   .bg-\[linear-gradient\(180deg\,\#F4EFE8_0\%\,\#FAF8F5_100\%\)\] {
     background-image: linear-gradient(180deg,#F4EFE8 0%,#FAF8F5 100%);
   }
@@ -617,9 +554,6 @@
   }
   .py-\[10px\] {
     padding-block: 10px;
-  }
-  .py-\[16px\] {
-    padding-block: 16px;
   }
   .py-\[48px\] {
     padding-block: 48px;
@@ -683,9 +617,6 @@
   }
   .text-\[16px\] {
     font-size: 16px;
-  }
-  .text-\[17px\] {
-    font-size: 17px;
   }
   .text-\[20px\] {
     font-size: 20px;
@@ -789,10 +720,6 @@
   .opacity-100 {
     opacity: 100%;
   }
-  .shadow-\[0_1px_3px_0_rgba\(0\,0\,0\,0\.10\)\,0_1px_2px_-1px_rgba\(0\,0\,0\,0\.10\)\] {
-    --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgba(0,0,0,0.10)), 0 1px 2px -1px var(--tw-shadow-color, rgba(0,0,0,0.10));
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
   .shadow-\[0_1px_3px_0_rgba\(0\,0\,0\,0\.10\)\,_0_1px_2px_-1px_rgba\(0\,0\,0\,0\.10\)\] {
     --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgba(0,0,0,0.10)), 0 1px 2px -1px var(--tw-shadow-color, rgba(0,0,0,0.10));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
@@ -809,13 +736,13 @@
     --tw-shadow: 0 20px 25px -5px var(--tw-shadow-color, rgba(0,0,0,0.10)), 0 8px 10px -6px var(--tw-shadow-color, rgba(0,0,0,0.10));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
-  .shadow-\[0_25px_50px_-12px_rgba\(0\,0\,0\,0\.29\)\] {
-    --tw-shadow: 0 25px 50px -12px var(--tw-shadow-color, rgba(0,0,0,0.29));
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
   .shadow-lg {
     --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .blur {
+    --tw-blur: blur(8px);
+    filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
   }
   .transition {
     transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, visibility, content-visibility, overlay, pointer-events;
@@ -887,13 +814,6 @@
       }
     }
   }
-  .hover\:bg-\[\#ffffffda\] {
-    &:hover {
-      @media (hover: hover) {
-        background-color: #ffffffda;
-      }
-    }
-  }
   .hover\:opacity-70 {
     &:hover {
       @media (hover: hover) {
@@ -908,22 +828,6 @@
       }
     }
   }
-  .hover\:brightness-95 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-brightness: brightness(95%);
-        filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
-      }
-    }
-  }
-  .hover\:saturate-200 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-saturate: saturate(200%);
-        filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
-      }
-    }
-  }
   .focus\:border-\[\#795634\] {
     &:focus {
       border-color: #795634;
@@ -933,21 +837,6 @@
     &:focus {
       outline-style: var(--tw-outline-style);
       outline-width: 0px;
-    }
-  }
-  .sm\:top-\[45\%\] {
-    @media (width >= 40rem) {
-      top: 45%;
-    }
-  }
-  .sm\:h-\[196px\] {
-    @media (width >= 40rem) {
-      height: 196px;
-    }
-  }
-  .sm\:w-\[196px\] {
-    @media (width >= 40rem) {
-      width: 196px;
     }
   }
   .lg\:relative {
@@ -1080,21 +969,10 @@
       display: none;
     }
   }
-  .lg\:inline-flex {
-    @media (width >= 64rem) {
-      display: inline-flex;
-    }
-  }
   .lg\:size-14 {
     @media (width >= 64rem) {
       width: calc(var(--spacing) * 14);
       height: calc(var(--spacing) * 14);
-    }
-  }
-  .lg\:size-20 {
-    @media (width >= 64rem) {
-      width: calc(var(--spacing) * 20);
-      height: calc(var(--spacing) * 20);
     }
   }
   .lg\:size-24 {
@@ -1113,24 +991,9 @@
       height: 48px;
     }
   }
-  .lg\:h-\[64px\] {
-    @media (width >= 64rem) {
-      height: 64px;
-    }
-  }
-  .lg\:h-\[152px\] {
-    @media (width >= 64rem) {
-      height: 152px;
-    }
-  }
   .lg\:w-\[26px\] {
     @media (width >= 64rem) {
       width: 26px;
-    }
-  }
-  .lg\:w-\[64px\] {
-    @media (width >= 64rem) {
-      width: 64px;
     }
   }
   .lg\:w-\[90px\] {
@@ -1141,11 +1004,6 @@
   .lg\:w-\[124px\] {
     @media (width >= 64rem) {
       width: 124px;
-    }
-  }
-  .lg\:w-\[160px\] {
-    @media (width >= 64rem) {
-      width: 160px;
     }
   }
   .lg\:w-\[200px\] {
@@ -1178,16 +1036,6 @@
       width: 800px;
     }
   }
-  .lg\:w-\[876px\] {
-    @media (width >= 64rem) {
-      width: 876px;
-    }
-  }
-  .lg\:w-auto {
-    @media (width >= 64rem) {
-      width: auto;
-    }
-  }
   .lg\:grid-cols-2 {
     @media (width >= 64rem) {
       grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -1196,11 +1044,6 @@
   .lg\:grid-cols-3 {
     @media (width >= 64rem) {
       grid-template-columns: repeat(3, minmax(0, 1fr));
-    }
-  }
-  .lg\:grid-cols-4 {
-    @media (width >= 64rem) {
-      grid-template-columns: repeat(4, minmax(0, 1fr));
     }
   }
   .lg\:grid-cols-\[300px_1fr\] {
@@ -1274,11 +1117,6 @@
       padding-inline: calc(var(--spacing) * 8);
     }
   }
-  .lg\:px-32 {
-    @media (width >= 64rem) {
-      padding-inline: calc(var(--spacing) * 32);
-    }
-  }
   .lg\:px-\[64px\] {
     @media (width >= 64rem) {
       padding-inline: 64px;
@@ -1294,19 +1132,9 @@
       padding-top: calc(var(--spacing) * 4);
     }
   }
-  .lg\:pt-12 {
-    @media (width >= 64rem) {
-      padding-top: calc(var(--spacing) * 12);
-    }
-  }
   .lg\:pt-\[32px\] {
     @media (width >= 64rem) {
       padding-top: 32px;
-    }
-  }
-  .lg\:pt-\[76px\] {
-    @media (width >= 64rem) {
-      padding-top: 76px;
     }
   }
   .lg\:pr-\[56px\] {
@@ -1332,11 +1160,6 @@
   .lg\:pb-\[56px\] {
     @media (width >= 64rem) {
       padding-bottom: 56px;
-    }
-  }
-  .lg\:pb-\[96px\] {
-    @media (width >= 64rem) {
-      padding-bottom: 96px;
     }
   }
   .lg\:pl-\[32px\] {
@@ -1387,11 +1210,6 @@
   .lg\:text-\[45px\] {
     @media (width >= 64rem) {
       font-size: 45px;
-    }
-  }
-  .lg\:text-\[46px\] {
-    @media (width >= 64rem) {
-      font-size: 46px;
     }
   }
   .lg\:text-\[48px\] {
@@ -1449,29 +1267,14 @@
       width: 927px;
     }
   }
-  .xl\:items-center {
-    @media (width >= 80rem) {
-      align-items: center;
-    }
-  }
   .xl\:gap-36 {
     @media (width >= 80rem) {
       gap: calc(var(--spacing) * 36);
     }
   }
-  .xl\:text-center {
-    @media (width >= 80rem) {
-      text-align: center;
-    }
-  }
   .xl\:text-start {
     @media (width >= 80rem) {
       text-align: start;
-    }
-  }
-  .xl\:text-\[56px\] {
-    @media (width >= 80rem) {
-      font-size: 56px;
     }
   }
   .xl\:text-\[72px\] {
@@ -1635,10 +1438,6 @@ html, body {
   inherits: false;
   initial-value: 0 0 #0000;
 }
-@property --tw-duration {
-  syntax: "*";
-  inherits: false;
-}
 @property --tw-blur {
   syntax: "*";
   inherits: false;
@@ -1692,6 +1491,10 @@ html, body {
   syntax: "*";
   inherits: false;
 }
+@property --tw-duration {
+  syntax: "*";
+  inherits: false;
+}
 @property --tw-outline-style {
   syntax: "*";
   inherits: false;
@@ -1727,7 +1530,6 @@ html, body {
       --tw-ring-offset-width: 0px;
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
-      --tw-duration: initial;
       --tw-blur: initial;
       --tw-brightness: initial;
       --tw-contrast: initial;
@@ -1741,6 +1543,7 @@ html, body {
       --tw-drop-shadow-color: initial;
       --tw-drop-shadow-alpha: 100%;
       --tw-drop-shadow-size: initial;
+      --tw-duration: initial;
       --tw-outline-style: solid;
     }
   }
